@@ -25,8 +25,8 @@ dependencies {
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.1'
-    compile 'org.springframework:spring-jdbc:5.3.1'
+    compile 'org.springframework:spring-beans:5.3.2'
+    compile 'org.springframework:spring-jdbc:5.3.2'
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
